# metis

./: .codex_tmp_http_forecast.csv  .codex_tmp_univariate_forecast.csv  .codex_tmp_xreg_forecast.csv  .coverage  .env.example  .env.local  .gitattributes  .gitignore  .tmp_repro_axiom_launcher.ps1  AGENTS.md  AUTOLOOP_PROMPT.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DESIGN_VARIANTS_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  INTEGRATION_VALIDATION_REPORT.md  INTEGRATION_VALIDATION_SUMMARY.md  LICENSE  README.md  VISION.md  WORKFLOW.md  agentic_rag_gui.py  autoloop_results.json  langextract_grounding_latest.html  main.py  morning_summary.md  package-lock.json  pyproject.toml  screenshot-phase4.js  sht_builder.py  skills-lock.json  validate_schema.py
.claude/: CLAUDE.md  launch.json  settings.local.json
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: expert-nextjs-developer.agent.md
.github/workflows/: ci.yml  release-exe.yml  release-installer.yml
.omx/: metrics.json
.omx/context/: improvement-pipeline-20260406T220419Z.md  remove-interface-direction-20260409T101638Z.md
.omx/plans/: prd-improvement-pipeline.md  prd-remove-interface-direction.md  test-spec-improvement-pipeline.md  test-spec-remove-interface-direction.md
.omx/state/: deep-interview-state.json  hud-state.json  notify-hook-state.json  ralph-progress.json  ralph-state.json  skill-active-state.json  tmux-hook-state.json  ultrawork-state.json
.playwright-cli/: page-2026-03-20T10-14-11-208Z.yml  page-2026-03-20T22-46-45-486Z.yml
.playwright-mcp/: page-2026-04-08T00-36-54-063Z.yml  page-2026-04-08T00-37-03-164Z.yml  page-2026-04-09T09-02-41-853Z.yml  page-2026-04-09T09-22-13-138Z.yml  page-2026-04-09T10-03-07-213Z.yml  page-2026-04-09T13-17-43-448Z.yml  page-2026-04-10T14-18-26-467Z.yml  page-2026-04-10T14-18-49-902Z.yml  page-2026-04-10T14-41-08-663Z.yml  page-2026-04-10T14-41-19-547Z.yml
.repowise/: state.json
.repowise/jobs/: 85a40b0d-aa6b-4974-b04b-9d1b44ca1778.json
.serena/: project.local.yml  project.yml
apps/: README.md
apps/axiom-desktop/: .gitignore  README.md  package.json
apps/axiom-reflex/: README.md  requirements.txt  rxconfig.py
apps/axiom-web/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  components.json  minimal.test.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  registry.json  vitest.config.ts  vitest.setup.ts
apps/axiom-web-lite/: .gitignore  README.md  astro.config.mjs  package.json
apps/metis-desktop/: README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/metis-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/metis-desktop/src-tauri/capabilities/: default.json
apps/metis-desktop/src-tauri/icons/: README.md  icon.icns
apps/metis-desktop/src-tauri/src/: lib.rs  main.rs
apps/metis-reflex/: README.md  requirements.txt  rxconfig.py
apps/metis-web/: .gitignore  .prettierignore  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  minimal.test.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  registry.json  tmp-playwright-smoke.spec.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/metis-web-lite/: README.md  package-lock.json  package.json
axiom_app/: __init__.py  app.py  audit.py  cli.py  config.py  default_settings.json  settings_store.py
axiom_app/api/: README.md  __init__.py  __main__.py  app.py  assistant.py  features.py  gguf.py  logs.py  models.py  sessions.py  settings.py
axiom_app/api_litestar/: __init__.py  app.py
axiom_app/assets/: __init__.py  llmfit_gguf_catalog.json
axiom_app/controllers/: __init__.py  app_controller.py
axiom_app/engine/: README.md  __init__.py  index_registry.py  indexing.py  querying.py  runs.py  streaming.py
axiom_app/models/: __init__.py  app_model.py  assistant_types.py  brain_graph.py  parity_types.py  session_types.py  sht.py  trace_event_schema.py
axiom_app/services/: __init__.py  assistant_companion.py  assistant_repository.py  gguf_serialization.py  heretic_service.py  index_service.py  local_llm_recommender.py  local_model_registry.py  profile_repository.py  reranker.py  response_pipeline.py  retrieval_pipeline.py  runtime_resolution.py  semantic_chunker.py  session_repository.py  stream_replay.py  (+6 more)
docs/: LANGUAGE.md  arrow-phase1-rollout.md  brand-colors.md  desktop_updates.md  prd.yaml  preserve-and-productize-plan.md  trace-events.md
metis_app/: __init__.py  app.py  audit.py  cli.py  config.py  default_settings.json  settings_store.py
plans/: IDEAS.md  IMPLEMENTATION.md  Prompt agents.md  README.md
release/: axiom_mvc_entry.py  metis_mvc_entry.py
scripts/: build-tauri-icons.mjs  build_api_sidecar.ps1  build_api_sidecar.sh  build_windows_exe.sh  dev_check.ps1  dev_check.sh  install_axiom.ps1  install_axiom.sh  install_metis.ps1  install_metis.sh  refresh_llmfit_catalog.py  refresh_nyx_catalog.py  run_api_dev.ps1  run_api_dev.sh  run_forecast_api_dev.ps1  run_nextgen_dev.ps1  run_nextgen_dev.sh
tests/: _litestar_helpers.py  conftest.py  test_api_app.py  test_api_app_state.py  test_api_comets.py  test_api_forge.py  test_api_gguf.py  test_api_litestar.py  test_api_logs.py  test_api_network_audit.py  test_api_opml_import.py  test_api_seedling.py  test_api_sessions.py  test_api_settings.py  test_app_bootstrap.py  test_app_controller_chat_modes.py  test_app_controller_local_gguf.py  test_app_controller_local_gguf_recommender.py  test_app_controller_persistence.py  test_app_controller_quick_model_switch.py  test_app_view_smoke.py  test_assistant_companion.py  test_assistant_record_reflection.py  test_assistant_types.py  test_atlas_api.py  test_audit.py  test_autonomous_research_service.py  test_brain_canvas.py  test_brain_graph.py  test_brain_metrics.py  test_brain_pass.py  test_brain_pass_cl1.py  test_comet_decision_engine.py  test_companion_voice.py  test_concurrency.py  test_controller_helpers.py  test_credential_pool.py  test_dependency_bootstrap.py  test_document_loader.py  test_embedding_providers.py  (+80 more)
tmp/: start_web.ps1
(+892 files in other folders)
