[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metis-app"
version = "0.1.0"
description = "METIS AI — Local-first frontier AI workspace with RAG, knowledge graphs, and an always-on companion"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "mrzapa" },
]
keywords = ["rag", "llm", "desktop", "tauri", "web", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Runtime dependencies are intentionally minimal; heavy ML libs (LangChain,
# sentence-transformers, llama-cpp-python) are optional/user-installed unless
# the installer opts into the pinned runtime-all bundle.
dependencies = ["psutil>=6", "PyYAML>=6", "pydantic>=2.0"]

[project.optional-dependencies]
api = [
    "litestar>=2.4",
    "python-multipart==0.0.26",
    "uvicorn[standard]==0.44.0",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "httpx>=0.28",
    "python-multipart==0.0.26",
    "uvicorn[standard]==0.44.0",
    "litestar>=2.4",
    # fastapi retained in dev only: legacy FastAPI surface in metis_app/api/ is
    # scheduled for removal but still covered by existing tests. Drop when those
    # tests have migrated to Litestar's TestClient.
    "fastapi==0.135.3",
]
forecast = [
    "timesfm>=2,<3",
    "torch>=2.0.0",
]
forecast-xreg = [
    "timesfm>=2,<3",
    "torch>=2.0.0",
    "jax>=0.4.0",
    "scikit-learn>=1.5.0",
]
runtime-all = [
    "rank-bm25>=0.2.2",
    # LangChain surface in use (see metis_app/utils/llm_providers.py,
    # metis_app/utils/embedding_providers.py, services/web_graph_service.py):
    #   - core: Messages primitives
    #   - openai / anthropic / google-genai: LLM providers
    #   - voyageai: embeddings
    #   - community: HuggingFaceEmbeddings
    # langchain-cohere, langchain-chroma, langchain-weaviate, and
    # langchain-text-splitters were dropped because they had no imports;
    # Chroma/Weaviate are used via the native clients (chromadb, weaviate-client).
    "langchain-core==0.3.83",
    "langchain-openai==0.3.35",
    "langchain-anthropic==0.3.22",
    "langchain-google-genai==2.1.12",
    "langchain-voyageai==0.1.3",
    "langchain-community==0.3.31",
    "chromadb>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.7.0",
    "weaviate-client>=4.0.0",
    "sentence-transformers>=3.0,<6",
    "llama-cpp-python>=0.3.0,<0.4",
    "opendataloader-pdf",
    "jdk4py",
    "pymupdf>=1.24",
]
live-backends = [
    "weaviate-client>=4,<5",
]
kreuzberg = [
    "kreuzberg",
]
opendataloader = [
    "opendataloader-pdf",
    "jdk4py",
]
vision = [
    "pymupdf>=1.24",
]
tribev2 = [
    "tribev2 @ git+https://github.com/facebookresearch/tribev2.git@main ; python_version >= '3.11'",
]
heretic = [
    "heretic-llm>=1.2",
]
news = [
    "feedparser>=6.0",
]
all = [
    "kreuzberg",
    "weaviate-client>=4,<5",
    "pymupdf>=1.24",
]

[project.scripts]
metis-parity-audit = "metis_app.audit:main"
metis-api = "metis_app.api_litestar.__main__:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
# Only package metis_app; exclude the legacy monolith and test tree.
include = ["metis_app*"]

[tool.setuptools.package-data]
"metis_app.assets" = ["logo.png", "llmfit_gguf_catalog.json", "nyx_catalog_review.json", "nyx_catalog_snapshot.json"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --tb=short"

[tool.mypy]
python_version = "3.10"
# Lenient baseline: broad scanning surfaces far too much drift for the current
# codebase. We opt modules in explicitly via `files` below as they are cleaned up.
# `follow_imports = silent` lets mypy resolve imported symbols for type context
# without reporting issues in those files — only the opt-in surface is gated.
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
check_untyped_defs = false
disallow_untyped_defs = false
# Only type-check modules that have been cleaned up.  Expand this list in
# follow-up PRs as more modules shed their type debt.
files = [
    "metis_app/services/session_repository.py",
    "metis_app/api_litestar/__main__.py",
]
